<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/main_activity_drawer_layout"
    tools:context=".presentation.MainActivity"
    tools:openDrawer="start">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageButton
            android:id="@+id/mainActivity_hamburger_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hamburger"
            android:elevation="5dp"
            android:layout_marginStart="20dp"
            android:paddingBottom="10dp"
            android:background="@android:color/transparent"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <com.google.android.material.appbar.AppBarLayout-->
<!--            android:id="@+id/app_bar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:theme="@style/Theme.DecaPay"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            >-->


<!--            <androidx.appcompat.widget.Toolbar-->
<!--                android:id="@+id/toolbar"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="?attr/actionBarSize"-->
<!--                android:background="?attr/colorPrimary"-->
<!--                app:popupTheme="@style/Theme.DecaPay"-->

<!--                />-->
<!--        </com.google.android.material.appbar.AppBarLayout>-->




        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/main_activity_fragment_container_fcv"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainActivity_hamburger_ib"
            app:navGraph="@navigation/authentication_nav_graph"
            tools:layout="@layout/fragment_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/main_activity_nav_view_nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_header"
        app:itemTextAppearance="@style/menu_text_style"
        app:menu="@menu/app_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
