<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    >
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".feature.createnewpassword.presentation.CreateNewPasswordFragment">


    <TextView
        android:id="@+id/create_new_password_fragment_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_new_password_fragment_title"
        android:textSize="@dimen/create_new_password_fragment_title_txsiz" />

    <TextView
        android:id="@+id/create_new_password_fragment_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_new_password_fragment_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_new_password_fragment_new_password_til"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_new_password_fragment_new_password_tiedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_new_password_fragment_new_password"
            android:inputType="textPassword"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/create_new_password_fragment_confirm_password_title_tv"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_new_password_fragment_confirm_password_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_new_password_fragment_confirm_password_til"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_new_password_fragment_confirm_password_tiedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_new_password_fragment_confirm_password_title"
            android:inputType="textPassword"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_new_password_fragment_create_new_password_button_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_button_bg"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_new_password_fragment_title"
        android:textAllCaps="false"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/white"
        android:textSize="@dimen/verify_password_reset_code_fragment_verify_button_txsiz" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp"
        >
        <TextView
            android:id="@+id/create_new_password_fragment_donthaveanaccount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/login_fragment_donthaveanaccount"
            />
        <TextView
            android:id="@+id/change__new_password_fragment_create_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/decapay_green"
            android:text="@string/login_fragment_create_account"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>