<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".feature.login.presentation.LoginFragment"
    android:orientation="vertical"
    >



    <TextView
        android:id="@+id/login_fragment_header_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_header_login"
        android:textSize="@dimen/login_fragment_header_login_txsiz" />

    <TextView
        android:id="@+id/login_fragment_email_field_title_email_tv"
        android:layout_width="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_email_field_title_email" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_fragment_email_textinputlayout_email_til"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_fragment_email_textinputedittext_email_tiedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_fragment_email_textinputedittext_hint_email"
            android:inputType="textEmailAddress"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_fragment_email_field_title_password_tv"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_password_field_title_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_fragment_password_textinputlayout_password_til"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_fragment_password_textinputlayout_password_tiedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_fragment_email_textinputedittext_hint_password"
            android:inputType="textPassword"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/login_fragment_remember_login_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/login_fragment_remember_login"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        />

    <Button
        android:id="@+id/login_fragment_login_button_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_button_bg"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_login_button"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/login_fragment_forgot_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/login_fragment_forgot_password"
        android:textColor="@color/decapay_cyan"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp"
        >
        <TextView
            android:id="@+id/login_fragment_donthaveanaccount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/login_fragment_donthaveanaccount"
            />
        <TextView
            android:id="@+id/login_fragment_create_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/decapay_green"
            android:text="@string/login_fragment_create_account"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>